--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,7 @@ if(HAS_BINARY_RESOURCES)
 endif()
 
 # setup your application, you can remove this include if you don't want to build applications
-include(${CMAKE_CURRENT_LIST_DIR}/App.cmake)
+# include(${CMAKE_CURRENT_LIST_DIR}/App.cmake)
 
 # setup your plugin(s), you can remove this include if you don't want to build plugins
 include(${CMAKE_CURRENT_LIST_DIR}/Plugin.cmake)
